--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -106,7 +106,7 @@
 
 @media (max-width: 500px) {
     .navbar {
-        width: 100%;
+        width: calc(100% - 24px);
         padding: 16px;
         padding-left: 8px;
     }
@@ -135,6 +135,7 @@
         left: 0;
         right: 0;
         background-color: white;
+        z-index: 100;
         border-top-right-radius: 16px;
         border-bottom-right-radius: 16px;
     }
