--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -62,13 +62,13 @@
 
 .hero-img {
     text-align: center;
+    position: relative;
+    top: 4px;
 }
 
 .trust-bar-section {
     background: linear-gradient(125.04deg, #632EE3 5.68%, #9F62F2 88.38%);
     padding: 80px 0;
-    position: relative;
-    top: -4px;
     color: white;
 }
 
@@ -119,7 +119,8 @@
     }
 
     .hero-img img {
-        width: 100%;
+        width: calc(100% - 32px);
+        padding: 0 16px;
     }
 
     .trust-bar-section {
