--- a/src/components/Home/HomeApps/HomeApp/HomeApp.css
+++ b/src/components/Home/HomeApps/HomeApp/HomeApp.css
@@ -15,7 +15,7 @@
     width: 316px;
     height: 316px;
     margin: 0 auto;
-    padding: 16px 0;
+    padding: 16px;
     display: flex;
     border-radius: 48px;
 }
@@ -31,4 +31,36 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.app-downloads {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    color: #00D390;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 8px 10px;
+    border-radius: 4px;
+    background-color: #F1F5E8;
+}
+
+.app-rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    color: #FF8811;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 8px 10px;
+    border-radius: 4px;
+    background-color: #FFF0E1;
+}
+
+.app-rating img,
+.app-downloads img{
+    width: 20px;
+    height: 20px;
 }
