--- a/src/components/Installation/Installation.css
+++ b/src/components/Installation/Installation.css
@@ -51,6 +51,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 16px;
 }
 
 .installed-app-card-left {
