--- a/src/components/AllApps/AllApps.css
+++ b/src/components/AllApps/AllApps.css
@@ -89,3 +89,50 @@
 .app-error-btn:hover {
     transform: translateY(2px);
 }
+
+@media(max-width:500px){
+    .all-apps{
+        width: 100%;
+        margin-top: 48px;
+        margin-bottom: 60px;
+    }
+    .all-apps-title{
+        font-size: 32px;
+        margin-bottom: 10px;
+    }
+    .all-apps-description{
+        font-size: 16px;
+        padding:0 16px;
+        line-height: 24px;
+        margin-bottom: 28px;
+    }
+    .all-apps-div{
+        padding: 0 16px;
+    }
+    .all-apps-num{
+        font-size: 18px;
+    }
+    .all-apps-search{
+        width: 160px;
+    }
+    .all-apps-container{
+        grid-template-columns: repeat(1,1fr);
+        gap: 16px;
+    }
+    .app-not-found{
+        margin: 60px 0;
+    }
+    .app-error img{
+        width: 90%;
+    }
+    .app-error-title{
+        font-size: 32px;
+        line-height: 48px;
+        margin-bottom: 10px;
+    }
+    .app-error-description{
+        font-size: 18px;
+        padding: 0 16px;
+        line-height: 24px;
+    }
+}
