--- a/src/components/Home/HomeApps/HomeApp/HomeApp.css
+++ b/src/components/Home/HomeApps/HomeApp/HomeApp.css
@@ -68,3 +68,23 @@
     width: 20px;
     height: 20px;
 }
+
+@media (max-width:500px){
+    .app-card{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 24px;
+        margin:0 16px;
+    }
+    .app-img{
+        width: 150px;
+        height: 150px;
+        border-radius: 0;
+        padding: 0;
+        margin: 0;
+    }
+    .app-div{
+        gap: 30px;
+    }
+}
