--- a/src/components/Installation/Installation.css
+++ b/src/components/Installation/Installation.css
@@ -124,3 +124,53 @@
     opacity: 0.75;
     transform: translateY(2px);
 }
+
+@media (max-width:500px){
+    .installed-app{
+        width: 100%;
+        margin: 60px auto;
+    }
+    .installed-app-title{
+        font-size: 32px;
+        line-height: 24px;
+        margin-bottom: 10px;
+    }
+    .installed-app-description{
+        font-size: 16px;
+        padding: 0 16px;
+        line-height: 24px;
+    }
+    .installed-app-count{
+        padding: 0 16px;
+    }
+    .installed-app-num{
+        font-size: 20px;
+    }
+    .installed-app-sort{
+        padding: 10px 16px;
+    }
+    .installed-app-card{
+        margin: 0 16px;
+    }
+    .installed-app-card-left{
+        gap: 16px;
+    }
+    .installed-app-card-img{
+        width: 72px;
+        height: 72px;
+    }
+    .installed-app-name{
+        margin-bottom: 4px;
+        font-size: 18px;
+    }
+    .installed-app-stats{
+        gap: 0;
+        justify-content: start;
+    }
+    .installed-app-stats-manage{
+        display: none;
+    }
+    .uninstall-btn{
+        padding: 12px 18px;
+    }
+}
