--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -41,6 +41,7 @@
 }
 
 .apps-store-btn {
+    background-color: white;
     border: 1px solid #D2D2D2;
     border-radius: 4px;
     padding: 12px 16px;
@@ -140,19 +141,20 @@
     .trust-bar-stats {
         display: grid;
         padding: 0 16px;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-    .stats-card:nth-child(3) {
-    grid-column: 1 / -1;
-    justify-self: center;
-    width: 100%;
-}
 
+    .stats-card:nth-child(3) {
+        grid-column: 1 / -1;
+        justify-self: center;
+        width: 100%;
+    }
 
     .trust-bar-title {
         margin-bottom: 28px;
     }
-    .stats-card-value{
+
+    .stats-card-value {
         font-size: 40px;
         padding: 0;
         line-height: 64px;
